<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.notifications.NotificationsFragment">


    <TextView
        android:id="@+id/text_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/vertical_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/upcoming_layout"
            android:orientation="horizontal"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="400dp"
                android:layout_height="67dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="Next 3 Reservations:"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="250dp"
            android:layout_height="67dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="150dp"
            android:text="3 Previous Reservations:"
            android:textSize="17sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/previous_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/waiting_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="300dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/waitList"
                android:layout_width="400dp"
                android:layout_height="67dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="0dp"
                android:text="Your WaitList:"
                android:textSize="17sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"/>


        </RelativeLayout>

    </RelativeLayout>



</androidx.constraintlayout.widget.ConstraintLayout>